--- a/configure.ac
+++ b/configure.ac
@@ -1,7 +1,7 @@
 #############################################################################
 # Configuration for ctools - tools for science analysis of CTA data         #
 # ------------------------------------------------------------------------- #
-# Copyright (C) 2011-2017 Juergen Knoedlseder                               #
+# Copyright (C) 2011-2018 Juergen Knoedlseder                               #
 # ------------------------------------------------------------------------- #
 #                                                                           #
 #  This program is free software: you can redistribute it and/or modify     #
@@ -1038,6 +1038,7 @@ AC_CONFIG_FILES([Makefile
                  src/ctulimit/Makefile
                  src/cterror/Makefile
                  src/support/Makefile
+                 src/template/Makefile
                  src/ctools-setup
                  test/Makefile
                  test/test_python_ctools.sh
