--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,7 +43,8 @@ SUBDIRS = support \
           ctulimit \
           cterror \
           ctphase \
-          ctprob
+          ctprob \
+          ctfindvar
 
 # Scripts to be distributed
 scripts = ctools-setup \
@@ -76,7 +77,8 @@ libctools_la_LIBADD = support/libsupport.la \
                       ctulimit/libctulimit.la \
                       cterror/libcterror.la \
                       ctphase/libctphase.la \
-                      ctprob/libctprob.la
+                      ctprob/libctprob.la \
+                      ctfindvar/libctfindvar.la
 
 libctools_la_LDFLAGS = -version-info $(CTOOLS_LT_VERSION) @OPENMP_LIB_LDFLAGS@
 
