--- a/cscripts/Makefile.am
+++ b/cscripts/Makefile.am
@@ -129,6 +129,7 @@ testscripts = $(srcdir)/tests/__init__.py \
               $(top_srcdir)/test/test_python_cscripts.py \
               $(top_srcdir)/test/test_cscript.py \
               $(top_srcdir)/test/test_cscaldb.py \
+              $(top_srcdir)/test/test_csbkgmodel.py \
               $(top_srcdir)/test/test_csebins.py \
               $(top_srcdir)/test/test_csfindobs.py \
               $(top_srcdir)/test/test_csinfo.py \
