Exclude template code from coverage testing

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -20,8 +20,8 @@ sonar.cxx.includeDirectories=/home/jenkins/gcc/gcc492/include/c++/4.9.2,/home/je
 sonar.cxx.missingIncludeWarnings=False
 
 # Exclusions
-sonar.exclusions=cscripts/tests/**,pyext/build/**,pyext/ctools/tools.py,pyext/ctools/*_wrap.cpp,pyext/ctools/tests/**,dev/**,doc/**,test/dev/**
-sonar.coverage.exclusions=test/science_verification.py,test/test_examples.py,test/test_mputils.py,pyext/setup.py
+sonar.exclusions=src/template/cscript_test.py,src/template/ctool_test.py,cscripts/tests/**,pyext/build/**,pyext/ctools/tools.py,pyext/ctools/*_wrap.cpp,pyext/ctools/tests/**,dev/**,doc/**,test/dev/**
+sonar.coverage.exclusions=src/template/**,test/science_verification.py,test/test_examples.py,test/test_mputils.py,pyext/setup.py
 sonar.cpd.exclusions=examples/**,test/**,pyext/ctools/tools.py
 
 # C++ configuration
