Add H.E.S.S. background lookup to models and enhance csbkgmodel unit test

--- a/models/Makefile.am
+++ b/models/Makefile.am
@@ -37,7 +37,8 @@ models = 1dc_howto.xml \
          crab_profile.xml \
          disk.xml \
          gauss.xml \
-         shell.xml
+         shell.xml \
+         hess_bkg_lookup.fits
 
 # Install models
 modelsdir   = $(datadir)/models
