--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 # Required metadata
 sonar.projectKey=ctools
 sonar.projectName=ctools
-sonar.projectVersion=1.6.0
+sonar.projectVersion=1.7.0.dev
 
 # Description
 sonar.projectDescription="Cherenkov Telescope Array Science Analysis Software"
