--- a/src/ctools-setup.in
+++ b/src/ctools-setup.in
@@ -140,6 +140,22 @@ varlist="$varlist PYTHONPATH PKG_CONFIG_PATH MANPATH"
 varlist="$varlist PFILES PFCLOBBER CALDB"
 
 #
+# Set LD_LIBRARY_PATH
+# ===================
+case $uname_system in
+  Darwin*)
+    ;;
+  *)
+    if [ -z "${LD_LIBRARY_PATH}" ]; then
+      LD_LIBRARY_PATH=$ctools_lib
+    else
+      LD_LIBRARY_PATH=$ctools_lib:$LD_LIBRARY_PATH
+    fi
+    varlist="$varlist LD_LIBRARY_PATH"
+    ;;
+esac
+
+#
 # Save values in output initialization shell scripts
 # ==================================================
 # Name of temporary config script
